# oxfplayer

./: .gitignore  .gitmodules  README.md
player/: .gitignore  CMakeLists.txt  README  README.md  conanfile.txt  cross_compile_ffmpeg.sh  prebuild.sh  prerun.sh
player/ext/FFMPEG-4.4/: README
player/ext/OpenSSL-1.0.1/: README
player/ext/PortAudio/: README
player/ext/pugixml/: README
player/proj/ONVIFPlayer-MinGW/: ONVIFPlayer.pro
player/proj/ONVIFPlayer-VS/: ONVIFPlayer-VS2022.sln  ONVIFPlayer.vcxproj
player/proj/ONVIFPlayer-VS2010/: ONVIFPlayer-VS2010.sln  ONVIFPlayer.vcxproj
player/proj/ONVIFPlayer-VS2012/: ONVIFPlayer-VS2012.sln  ONVIFPlayer.vcxproj
player/proj/ONVIFPlayer-VS2015/: ONVIFPlayer.vcxproj
player/proj/ONVIFPlayer-VS2019/: ONVIFPlayer.vcxproj  ONVIFPlayer.vcxproj.filters
player/proj/ONVIFPlayer-VS2022/: ONVIFPlayer.sln
player/proj/ONVIFPlayer-VS2022/ONVIFPlayer/: ONVIFPlayer.vcxproj  ONVIFPlayer.vcxproj.filters
player/proj/ONVIFPlayer-VS2022/ONVIFPlayerLib/: ONVIFPlayerLib.vcxproj  ONVIFPlayerLib.vcxproj.filters
player/proj/ONVIFPlayer-VS2022/tests/: additionalUserInformationBoxTest.vcxproj  additionalUserInformationBoxTest.vcxproj.filters
player/proj/ONVIFPlayer-VS2022/tests/additionalUserInformationBoxTest/: additionalUserInformationBoxTest.vcxproj
player/proj/ONVIFPlayer-VS2022/tests/afIdentificationBoxTest/: afIdentificationBoxTest.vcxproj
player/proj/ONVIFPlayer-VS2022/tests/cameraMicrophoneIdentificationBoxTest/: cameraMicrophoneIdentificationBoxTest.vcxproj
player/proj/ONVIFPlayer-VS2022/tests/certificateBoxTest/: certificateBoxTest.vcxproj
player/proj/ONVIFPlayer-VS2022/tests/certificateSSLTest/: certificateSSLTest.vcxproj
player/proj/ONVIFPlayer-VS2022/tests/compactSampleSizeBoxTest/: compactSampleSizeBoxTest.vcxproj
player/proj/tests/: main.cpp  tests.pro
player/src/: CMakeLists.txt  main.cpp
player/src/common/: ONVIFSignInfo.h  crosscompilation_cxx11.h  crosscompilation_inttypes.h  defines.h  enums.h  ffmpeg.h  fragmentInfo.cpp  fragmentInfo.h  queue.h  segmentInfo.cpp  segmentInfo.h  signingInformation.h  types.h
player/src/parser/: additionalUserInformation.hpp  afIdentificationBox.hpp  boxFactory.cpp  boxFactory.h  cameraMicrophoneIdentificationBox.hpp  certificateBox.hpp  certificateStorage.cpp  certificateStorage.h  compactSampleSizeBox.hpp  consistencyChecker.cpp  consistencyChecker.h  correctstarttimebox.hpp  editListBox.hpp  fileTypeBox.hpp  fourcc.cpp  fourcc.h  fragmentExtractor.cpp  fragmentExtractor.h  mediaHeaderBox.hpp  mediaParser.cpp  mediaParser.h  movieExtendsHeaderBox.hpp  movieHeaderBox.hpp  oxfverifier.cpp  oxfverifier.h  protectionSystemSpecificHeaderBox.hpp  sampleDependencyTypeBox.hpp  sampleSizeBox.hpp  segmentExtractor.cpp  segmentExtractor.h  signatureBox.hpp  signatureConfigurationBox.hpp  signatureExtractor.cpp  signatureExtractor.h  surveillanceExportBox.hpp  surveillanceMetadataSampleConfigBox.hpp  surveillanceMetadataSampleEntryBox.hpp  templateContentBoxes.hpp  templateFullBoxes.hpp  templateSuperBoxes.hpp  (+12 more)
player/src/parser/basic/: box.cpp  box.h  contentBox.hpp  dataBox.hpp  fileBox.hpp  fullBox.hpp  mandatoryBox.cpp  mandatoryBox.h  superBox.hpp  superFullBox.hpp  tableBox.hpp  unknownBox.cpp  unknownBox.h
player/src/parser/basic/mixin/: children.hpp  (+2 more)
player/src/parser/helpers/: endian.hpp  hexarray.hpp  is_a.hpp  istream.hpp  optional.hpp  property.hpp  uint24.hpp
player/src/parserUI/: certificateStorageDialog.cpp  certificateStorageDialog.h  certificateStorageDialog.ui  oxfverifier.cpp  oxfverifier.h  parserWidget.cpp  parserWidget.h  parserWidget.ui  smfValidatorWidget.cpp  smfValidatorWidget.h  smfValidatorWidget.ui  verifyerdialog.cpp  verifyerdialog.h  verifyerdialog.ui
player/src/player/: audioContext.cpp  audioContext.h  audioPlayback.cpp  audioPlayback.h  avFrameWrapper.cpp  avFrameWrapper.h  basePlayback.h  controller.cpp  controller.h  decoder.h  engine.cpp  engine.h  mainContext.cpp  mainContext.h  nonqueuedAudioDecoder.cpp  nonqueuedAudioDecoder.h  nonqueuedDecoder.h  nonqueuedVideoDecoder.cpp  nonqueuedVideoDecoder.h  portAudioPlayback.cpp  portAudioPlayback.h  portAudioThread.cpp  portAudioThread.h  queuedAudioDecoder.cpp  queuedAudioDecoder.h  queuedDecoder.h  queuedMetadataDecoder.cpp  queuedMetadataDecoder.h  queuedVideoDecoder.cpp  queuedVideoDecoder.h  streamReader.cpp  streamReader.h  syncThread.cpp  syncThread.h  videoContext.cpp  videoContext.h  videoPlayback.cpp  videoPlayback.h
player/src/playerUI/: clickableSlider.cpp  clickableSlider.h  controlsWidget.cpp  controlsWidget.h  controlsWidget.ui  fragmentListWidget.cpp  fragmentListWidget.h  fullscreenPlayerWidget.cpp  fullscreenPlayerWidget.h  movingOutArea.cpp  movingOutArea.h  playerWidget.cpp  playerWidget.h  playerWidget.ui  playerWidgetInterface.h  videoFrameWidget.cpp  videoFrameWidget.h
player/src/resources/: ONVIFPlayer.aps  ONVIFPlayer.rc  resources.qrc
player/src/tests/: additionalUserInformationBoxTest.cpp  additionalUserInformationBoxTest.h  afIdentificationBoxTest.cpp  afIdentificationBoxTest.h  boxTestsCommon.h  cameraMicrophoneIdentificationBoxTest.cpp  cameraMicrophoneIdentificationBoxTest.h  certificateBoxTest.cpp  certificateBoxTest.h  certificateSSLTest.cpp  certificateSSLTest.h  compactSampleSizeBoxTest.cpp  compactSampleSizeBoxTest.h  editListBoxTest.cpp  editListBoxTest.h  engineTest.cpp  engineTest.h  mediaHeaderBoxTest.cpp  mediaHeaderBoxTest.h  movieExtendsHeaderBoxTest.cpp  movieExtendsHeaderBoxTest.h  movieHeaderBoxTest.cpp  movieHeaderBoxTest.h  ostream.hpp  sampleDependencyTypeBoxTest.cpp  sampleDependencyTypeBoxTest.h  sampleSizeBoxTest.cpp  sampleSizeBoxTest.h  signatureBoxTest.cpp  signatureBoxTest.h  signatureConfigurationBoxTest.cpp  signatureConfigurationBoxTest.h  surveillanceExportBoxTest.cpp  surveillanceExportBoxTest.h  surveillanceMetadataSampleConfigBoxTest.cpp  surveillanceMetadataSampleConfigBoxTest.h  surveillanceMetadataSampleEntryBoxTest.cpp  surveillanceMetadataSampleEntryBoxTest.h  trackFragmentHeaderBoxTest.cpp  trackFragmentHeaderBoxTest.h  (+6 more)
(+28 files in other folders)
